--- a/categories.html
+++ b/categories.html
@@ -301,19 +301,19 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="auctions.html">Browse Auctions</a></li>
-                        <li><a href="#">Sell With Us</a></li>
-                        <li><a href="#">How to Bid</a></li>
-                        <li><a href="#">Buyer Guide</a></li>
+                        <li><a href="sell-with-us.html">Sell With Us</a></li>
+                        <li><a href="how-to-bid.html">How to Bid</a></li>
+                        <li><a href="buyer-guide.html">Buyer Guide</a></li>
                     </ul>
                 </nav>
 
                 <nav class="footer-nav">
                     <h4>Categories</h4>
                     <ul>
-                        <li><a href="#">Luxury Watches</a></li>
-                        <li><a href="#">Fine Art</a></li>
-                        <li><a href="#">Jewelry</a></li>
-                        <li><a href="#">Antiques</a></li>
+                        <li><a href="live.html?category=watches">Luxury Watches</a></li>
+                        <li><a href="live.html?category=art">Fine Art</a></li>
+                        <li><a href="live.html?category=jewelry">Jewelry</a></li>
+                        <li><a href="live.html?category=antiques">Antiques</a></li>
                     </ul>
                 </nav>
 
@@ -321,9 +321,9 @@
                     <h4>Support</h4>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Shipping Info</a></li>
-                        <li><a href="#">Returns Policy</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="shipping-info.html">Shipping Info</a></li>
+                        <li><a href="returns-policy.html">Returns Policy</a></li>
                     </ul>
                 </nav>
             </div>
@@ -331,8 +331,8 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Ankand. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms of Service</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-of-service.html">Terms of Service</a>
                 </div>
             </div>
         </div>
