--- a/auction-detail.html
+++ b/auction-detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bid on 1965 Rolex Submariner at Ankand. Live auction with secure bidding.">
-    <title>1965 Rolex Submariner | Ankand — Gjeni & Shitet</title>
+    <title>1965 Rolex Submariner | Ankand — Gjeni &amp; Shitet</title>
     <link rel="icon" type="image/svg+xml" href="images/logo.svg">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,24 +21,39 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="navbar-container">
+            <!-- Left: Navigation Links -->
+            <ul class="navbar-nav" id="navMenu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="live.html" class="nav-link active">Auctions</a></li>
+                <li><a href="categories.html" class="nav-link">Categories</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <!-- Mobile Nav Actions -->
+                <div class="mobile-nav-actions">
+                    <a href="login.html" class="btn btn-nav-outline">Login</a>
+                    <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
+                    <a href="live.html" class="btn-join-live">Join Live</a>
+                </div>
+            </ul>
+
+            <!-- Center: Logo -->
             <a href="index.html" class="navbar-brand">
                 <img src="images/logo.svg" alt="Ankand Logo" class="navbar-logo-icon">
                 <div>
                     <div class="navbar-logo">Ankand</div>
-                    <div class="navbar-tagline">Gjeni & Shitet</div>
+                    <div class="navbar-tagline">Gjeni &amp; Shitet</div>
                 </div>
             </a>
-            <ul class="navbar-nav" id="navMenu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="auctions.html" class="nav-link active">Auctions</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
-            </ul>
+
+            <!-- Right: Actions -->
             <div class="navbar-actions">
-                <a href="#" class="btn btn-secondary btn-sm">Login</a>
-                <a href="#" class="btn btn-primary btn-sm">Register</a>
+                <a href="login.html" class="btn btn-nav-outline">Login</a>
+                <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
+                <a href="live.html" class="btn-join-live">Join Live</a>
                 <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
-                    <span></span><span></span><span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </button>
             </div>
         </div>
@@ -47,13 +62,7 @@
     <!-- Page Header -->
     <header class="page-header">
         <div class="container">
-            <nav class="breadcrumb">
-                <a href="index.html">Home</a>
-                <span class="breadcrumb-separator">/</span>
-                <a href="auctions.html">Auctions</a>
-                <span class="breadcrumb-separator">/</span>
-                <span>1965 Rolex Submariner</span>
-            </nav>
+            <h1>Auction <span class="text-gold">Details</span></h1>
         </div>
     </header>
 
@@ -153,7 +162,7 @@
                         <ul
                             style="color: var(--text-secondary); display: grid; grid-template-columns: repeat(2, 1fr); gap: var(--space-sm);">
                             <li><i class="bi bi-check-circle-fill text-gold"></i> Original Box</li>
-                            <li><i class="bi bi-check-circle-fill text-gold"></i> Papers & Certificate</li>
+                            <li><i class="bi bi-check-circle-fill text-gold"></i> Papers &amp; Certificate</li>
                             <li><i class="bi bi-check-circle-fill text-gold"></i> Original Bracelet</li>
                             <li><i class="bi bi-check-circle-fill text-gold"></i> Service History</li>
                         </ul>
@@ -324,42 +333,56 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <div class="footer-logo">Ankand</div>
-                    <p class="footer-description">Albania's premier online auction marketplace.</p>
+                    <div class="footer-logo-wrapper">
+                        <img src="images/logo.svg" alt="Ankand" class="footer-logo-icon">
+                        <div class="footer-logo-content">
+                            <span class="footer-logo">Ankand</span>
+                            <span class="footer-tagline">Gjeni &amp; Shitet</span>
+                        </div>
+                    </div>
+                    <p class="footer-description">Albania's premier online auction marketplace for luxury items,
+                        antiques, and collectors' treasures.</p>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="bi bi-twitter-x"></i></a>
+                        <a href="#" class="social-link" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="social-link" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="social-link" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
+                        <a href="#" class="social-link" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
                 <nav class="footer-nav">
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="auctions.html">Browse Auctions</a></li>
-                        <li><a href="#">Sell With Us</a></li>
-                        <li><a href="#">How to Bid</a></li>
+                        <li><a href="sell-with-us.html">Sell With Us</a></li>
+                        <li><a href="how-to-bid.html">How to Bid</a></li>
+                        <li><a href="buyer-guide.html">Buyer Guide</a></li>
                     </ul>
                 </nav>
                 <nav class="footer-nav">
                     <h4>Categories</h4>
                     <ul>
-                        <li><a href="#">Luxury Watches</a></li>
-                        <li><a href="#">Fine Art</a></li>
-                        <li><a href="#">Jewelry</a></li>
+                        <li><a href="live.html?category=watches">Luxury Watches</a></li>
+                        <li><a href="live.html?category=art">Fine Art</a></li>
+                        <li><a href="live.html?category=jewelry">Jewelry</a></li>
+                        <li><a href="live.html?category=antiques">Antiques</a></li>
                     </ul>
                 </nav>
                 <nav class="footer-nav">
                     <h4>Support</h4>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Shipping Info</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="shipping-info.html">Shipping Info</a></li>
+                        <li><a href="returns-policy.html">Returns Policy</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Ankand. All rights reserved.</p>
-                <div class="footer-links"><a href="#">Privacy</a><a href="#">Terms</a></div>
+                <div class="footer-links">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="terms-of-service.html">Terms of Service</a>
+                </div>
             </div>
         </div>
     </footer>
