--- a/live.html
+++ b/live.html
@@ -64,11 +64,6 @@
     <header class="page-header">
         <div class="container">
             <h1>Live <span class="text-gold">Auctions</span></h1>
-            <nav class="breadcrumb">
-                <a href="index.html">Home</a>
-                <span class="breadcrumb-separator">/</span>
-                <span>Auctions</span>
-            </nav>
         </div>
     </header>
 
@@ -324,35 +319,35 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="auctions.html">Browse Auctions</a></li>
-                        <li><a href="#">Sell With Us</a></li>
-                        <li><a href="#">How to Bid</a></li>
-                        <li><a href="#">Buyer Guide</a></li>
+                        <li><a href="sell-with-us.html">Sell With Us</a></li>
+                        <li><a href="how-to-bid.html">How to Bid</a></li>
+                        <li><a href="buyer-guide.html">Buyer Guide</a></li>
                     </ul>
                 </nav>
                 <nav class="footer-nav">
                     <h4>Categories</h4>
                     <ul>
-                        <li><a href="#">Luxury Watches</a></li>
-                        <li><a href="#">Fine Art</a></li>
-                        <li><a href="#">Jewelry</a></li>
-                        <li><a href="#">Antiques</a></li>
+                        <li><a href="live.html?category=watches">Luxury Watches</a></li>
+                        <li><a href="live.html?category=art">Fine Art</a></li>
+                        <li><a href="live.html?category=jewelry">Jewelry</a></li>
+                        <li><a href="live.html?category=antiques">Antiques</a></li>
                     </ul>
                 </nav>
                 <nav class="footer-nav">
                     <h4>Support</h4>
                     <ul>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Shipping Info</a></li>
-                        <li><a href="#">Returns Policy</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="shipping-info.html">Shipping Info</a></li>
+                        <li><a href="returns-policy.html">Returns Policy</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Ankand. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="#">Privacy</a>
-                    <a href="#">Terms</a>
+                    <a href="privacy-policy.html">Privacy</a>
+                    <a href="terms-of-service.html">Terms</a>
                 </div>
             </div>
         </div>
