--- a/index-2.html
+++ b/index-2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Ankand - Gjeni & Shitet. Platforma premium e ankandeve online në Shqipëri. Blini dhe shisni objekte të veçanta.">
-  <title>Ankand — Gjeni & Shitet | Premium Online Auctions</title>
+  <title>Ankand — Premium Collections | Browse Curated Auctions</title>
   <link rel="icon" type="image/svg+xml" href="images/logo.svg">
 
   <!-- Bootstrap 5 -->
@@ -31,8 +31,8 @@
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false">Home</button>
           <div class="nav-dropdown-menu">
-            <a href="index.html" class="nav-dropdown-item active">Live Auctions</a>
-            <a href="index-2.html" class="nav-dropdown-item">Premium Collections</a>
+            <a href="index.html" class="nav-dropdown-item">Live Auctions</a>
+            <a href="index-2.html" class="nav-dropdown-item active">Premium Collections</a>
           </div>
         </li>
         <li><a href="live.html" class="nav-link">Auctions</a></li>
@@ -73,44 +73,43 @@
     </div>
   </nav>
 
-  <!-- Hero Section - Yellow Gradient -->
-  <section class="hero hero-yellow">
-    <div class="hero-background-yellow"></div>
+  <!-- Hero Section - Dark Gradient -->
+  <section class="hero" style="background: var(--dark-gradient); padding: 6rem 0;">
     <div class="container">
-      <div class="hero-content hero-content-dark">
-        <span class="hero-label hero-label-dark">
-          <i class="bi bi-lightning-charge-fill"></i>
-          Live Auctions Now
+      <div class="hero-content" style="text-align: center;">
+        <span class="hero-label" style="justify-content: center;">
+          <i class="bi bi-gem"></i>
+          Curated Excellence
         </span>
-        <h1 class="hero-title hero-title-dark">
-          Live Auctions with <span class="text-dark-accent">Real-Time</span> Competitive Bidding
+        <h1 class="hero-title" style="text-align: center;">
+          Browse <span class="text-gold">Premium Collections</span> of Verified Luxury Items
         </h1>
-        <p class="hero-description hero-description-dark">
-          Join Albania's premier curated auction marketplace. Bid on verified luxury items, fine art,
-          antiques, and exclusive collectibles with complete trust and transparency.
+        <p class="hero-description" style="text-align: center; max-width: 700px; margin: 0 auto 2rem;">
+          Explore our carefully curated selection of authenticated luxury watches, fine art, jewelry, and antiques.
+          Each piece vetted by expert appraisers for your confidence.
         </p>
-        <div class="hero-actions">
-          <a href="live.html" class="btn btn-dark btn-lg">
-            <i class="bi bi-hammer"></i>
-            Join Live Auctions
+        <div class="hero-actions" style="justify-content: center;">
+          <a href="categories.html" class="btn btn-primary btn-lg">
+            <i class="bi bi-grid-3x3-gap"></i>
+            Explore Collections
           </a>
-          <a href="categories.html" class="btn btn-outline-dark btn-lg">
-            Browse Categories
+          <a href="live.html" class="btn btn-secondary btn-lg">
+            View Live Auctions
           </a>
         </div>
 
-        <div class="hero-stats hero-stats-dark">
+        <div class="hero-stats" style="justify-content: center;">
           <div class="stat-item">
-            <div class="stat-value stat-value-dark">2,500+</div>
-            <div class="stat-label stat-label-dark">Active Bidders</div>
+            <div class="stat-value">850+</div>
+            <div class="stat-label">Premium Items</div>
           </div>
           <div class="stat-item">
-            <div class="stat-value stat-value-dark">€15M+</div>
-            <div class="stat-label stat-label-dark">Total Sales</div>
+            <div class="stat-value">100%</div>
+            <div class="stat-label">Authenticated</div>
           </div>
           <div class="stat-item">
-            <div class="stat-value stat-value-dark">98%</div>
-            <div class="stat-label stat-label-dark">Satisfaction</div>
+            <div class="stat-value">45+</div>
+            <div class="stat-label">Expert Appraisers</div>
           </div>
         </div>
       </div>
@@ -121,8 +120,8 @@
   <section class="section" id="featured">
     <div class="container">
       <div class="section-header">
-        <h2>Featured <span class="text-gold">Auctions</span></h2>
-        <p>Don't miss these exclusive items with bids ending soon</p>
+        <h2>Premium <span class="text-gold">Selections</span></h2>
+        <p>Handpicked luxury items from our curated collections</p>
       </div>
 
       <div class="featured-grid">
