--- a/auction-detail.html
+++ b/auction-detail.html
@@ -23,7 +23,13 @@
         <div class="navbar-container">
             <!-- Left: Navigation Links -->
             <ul class="navbar-nav" id="navMenu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-dropdown">
+                    <button class="nav-dropdown-toggle" aria-expanded="false">Home</button>
+                    <div class="nav-dropdown-menu">
+                        <a href="index.html" class="nav-dropdown-item">Live Auctions</a>
+                        <a href="index-2.html" class="nav-dropdown-item">Premium Collections</a>
+                    </div>
+                </li>
                 <li><a href="live.html" class="nav-link active">Auctions</a></li>
                 <li><a href="categories.html" class="nav-link">Categories</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
@@ -47,6 +53,9 @@
 
             <!-- Right: Actions -->
             <div class="navbar-actions">
+                <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
+                    <i class="bi bi-sun-fill"></i>
+                </button>
                 <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
@@ -75,28 +84,28 @@
                     <!-- Product Gallery -->
                     <div class="product-gallery">
                         <div class="gallery-main">
-                            <img src="https://images.unsplash.com/photo-1594223274512-ad4803739b7c?w=800&h=600&fit=crop"
+                            <img src="https://images.unsplash.com/photo-1523170335258-f5ed11844a49?w=800&h=600&fit=crop"
                                 alt="1965 Rolex Submariner" id="mainImage">
                         </div>
                         <div class="gallery-thumbs">
                             <div class="gallery-thumb active"
-                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1594223274512-ad4803739b7c?w=800&h=600&fit=crop')">
-                                <img src="https://images.unsplash.com/photo-1594223274512-ad4803739b7c?w=100&h=75&fit=crop"
+                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1523170335258-f5ed11844a49?w=800&h=600&fit=crop')">
+                                <img src="https://images.unsplash.com/photo-1523170335258-f5ed11844a49?w=100&h=75&fit=crop"
                                     alt="View 1">
                             </div>
                             <div class="gallery-thumb"
-                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=800&h=600&fit=crop')">
-                                <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=100&h=75&fit=crop"
+                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1614164185128-e4ec99c436d7?w=800&h=600&fit=crop')">
+                                <img src="https://images.unsplash.com/photo-1614164185128-e4ec99c436d7?w=100&h=75&fit=crop"
                                     alt="View 2">
                             </div>
                             <div class="gallery-thumb"
-                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1587836374828-4dbafa94cf0e?w=800&h=600&fit=crop')">
-                                <img src="https://images.unsplash.com/photo-1587836374828-4dbafa94cf0e?w=100&h=75&fit=crop"
+                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1611694440008-1b0f1c6bb7bb?w=800&h=600&fit=crop')">
+                                <img src="https://images.unsplash.com/photo-1611694440008-1b0f1c6bb7bb?w=100&h=75&fit=crop"
                                     alt="View 3">
                             </div>
                             <div class="gallery-thumb"
-                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1548171916-c8fd5a41f5f4?w=800&h=600&fit=crop')">
-                                <img src="https://images.unsplash.com/photo-1548171916-c8fd5a41f5f4?w=100&h=75&fit=crop"
+                                onclick="changeImage(this, 'https://images.unsplash.com/photo-1526045612212-70caf35c14df?w=800&h=600&fit=crop')">
+                                <img src="https://images.unsplash.com/photo-1526045612212-70caf35c14df?w=100&h=75&fit=crop"
                                     alt="View 4">
                             </div>
                         </div>
@@ -388,8 +397,110 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/products-data.js"></script>
     <script src="js/script.js"></script>
     <script>
+        // Dynamic Product Loading
+        function loadProductData() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const productId = urlParams.get('id') || 'rolex-submariner';
+            
+            const product = PRODUCTS_DATA[productId];
+            if (!product) {
+                console.error('Product not found:', productId);
+                return;
+            }
+
+            // Update page title
+            document.title = product.name + ' | Ankand — Gjeni & Shitet';
+
+            // Update main image
+           umelementById('mainImage').src = product.mainImage;
+
+            // Update gallery thumbnails
+            const thumbs = document.querySelectorAll('.gallery-thumb');
+            thumbs.forEach((thumb, index) => {
+                if (product.images[index]) {
+                    const img = thumb.querySelector('img');
+                    img.src = product.images[index].replace('w=800&h=600', 'w=100&h=75');
+                    thumb.setAttribute('onclick', `changeImage(this, '${product.images[index]}')`);
+                }
+            });
+
+            // Update product info
+            document.querySelector('.auction-badge').textContent = 'Live Auction';
+            document.querySelector('h1[style*="font-size: 2rem"]').textContent = product.name;
+            document.querySelector('p[style*="color: var(--text-secondary)"]').textContent = product.description;
+
+            // Update specifications
+            const specDivs = document.querySelectorAll('.col-6.col-md-3 > div');
+            const specKeys = Object.keys(product.specs);
+            specDivs.forEach((div, index) => {
+                if (specKeys[index]) {
+                    div.querySelector('div[style*="text-transform: uppercase"]').textContent = specKeys[index];
+                    div.querySelector('div[style*="color: var(--primary-gold)"]').textContent = product.specs[specKeys[index]];
+                }
+            });
+
+            // Update included items
+            const includedList = document.querySelector('ul[style*="grid-template-columns"]');
+            includedList.innerHTML = product.included.map(item => 
+                `<li><i class="bi bi-check-circle-fill text-gold"></i> ${item}</li>`
+            ).join('');
+
+            // Update bid panel
+            document.querySelector('.bid-amount').textContent = '€' + product.currentBid.toLocaleString();
+            document.querySelector('.big-timer').setAttribute('data-end', product.endTime);
+            document.querySelector('h4[style*="font-size: 1rem"]').textContent = `Bid History (${product.bidCount} bids)`;
+            document.querySelector('label[style*="font-size: 0.85rem"]').textContent = 
+                `Your Bid (Minimum: €${(product.currentBid + 250).toLocaleString()})`;
+            document.querySelector('.bid-input').value = '€' + (product.currentBid + 250).toLocaleString();
+
+            // Update quick bid buttons
+            const minBid = product.currentBid + 250;
+            const quickBids = [minBid, minBid + 250, minBid + 750, minBid + 1250];
+            document.querySelectorAll('.quick-bid-btn').forEach((btn, index) => {
+                btn.textContent = '€' + quickBids[index].toLocaleString();
+                btn.setAttribute('onclick', `setQuickBid(${quickBids[index]})`);
+            });
+
+            // Update related items
+            updateRelatedItems(product.related);
+
+            // Reinitialize countdown timer for this product
+            initCountdownTimers();
+        }
+
+        function updateRelatedItems(relatedIds) {
+            const relatedContainer = document.querySelector('.row.g-4');
+            if (!relatedContainer) return;
+
+            relatedContainer.innerHTML = relatedIds.slice(0, 3).map(id => {
+                const prod = PRODUCTS_DATA[id];
+                if (!prod) return '';
+                return `
+                    <div class="col-md-4">
+                        <a href="auction-detail.html?id=${prod.id}" class="card auction-card">
+                            <div class="card-image">
+                                <img src="${prod.mainImage.replace('w=800&h=600', 'w=400&h=300')}" alt="${prod.shortName}">
+                                <span class="auction-badge live">Live</span>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">${prod.shortName}</h3>
+                                <div class="auction-info">
+                                    <div>
+                                        <div class="current-bid-label">Current Bid</div>
+                                        <div class="current-bid-amount">€${prod.currentBid.toLocaleString()}</div>
+                                    </div>
+                                    <div class="bid-count">${prod.bidCount} bids</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                `;
+            }).join('');
+        }
+
         // Gallery image change
         function changeImage(thumb, src) {
             document.getElementById('mainImage').src = src;
@@ -406,6 +517,9 @@
         function placeBid() {
             alert('Please login to place a bid.');
         }
+
+        // Load product data when page loads
+        window.addEventListener('DOMContentLoaded', loadProductData);
     </script>
 </body>
 
