--- a/categories.html
+++ b/categories.html
@@ -164,14 +164,20 @@
         <div class="navbar-container">
             <!-- Left: Navigation Links -->
             <ul class="navbar-nav" id="navMenu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-dropdown">
+                    <button class="nav-dropdown-toggle" aria-expanded="false">Home</button>
+                    <div class="nav-dropdown-menu">
+                        <a href="index.html" class="nav-dropdown-item">Live Auctions</a>
+                        <a href="index-2.html" class="nav-dropdown-item">Premium Collections</a>
+                    </div>
+                </li>
                 <li><a href="live.html" class="nav-link">Auctions</a></li>
                 <li><a href="categories.html" class="nav-link active">Categories</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <!-- Mobile Nav Actions -->
-                <div class="mobile-nav-actions">
-                    <a href="login.html" class="btn btn-nav-outline">Login</a>
+          <div class="mobile-nav-actions">
+<a href="login.html" class="btn btn-nav-outline">Login</a>
                     <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                     <a href="live.html" class="btn-join-live">Join Live</a>
                 </div>
@@ -188,6 +194,9 @@
 
             <!-- Right: Actions -->
             <div class="navbar-actions">
+                <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
+                    <i class="bi bi-sun-fill"></i>
+                </button>
                 <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
@@ -212,7 +221,7 @@
     <!-- Editorial Category Grid -->
     <section class="editorial-grid">
         <a href="live.html?category=art" class="category-tile tile-gold">
-            <img src="https://images.unsplash.com/photo-1579762715118-a6f1d4b934f1?w=200&h=200&fit=crop" alt="Art"
+            <img src="https://images.unsplash.com/photo-1547826039-bfc35e0f1ea8?w=200&h=200&fit=crop" alt="Art"
                 class="tile-image">
             <h2 class="tile-title">Art</h2>
             <span class="tile-count">89 Items</span>
@@ -233,7 +242,7 @@
         </a>
 
         <a href="live.html?category=watches" class="category-tile tile-secondary">
-            <img src="https://images.unsplash.com/photo-1594223274512-ad4803739b7c?w=200&h=200&fit=crop" alt="Watches"
+            <img src="https://images.unsplash.com/photo-1523170335258-f5ed11844a49?w=200&h=200&fit=crop" alt="Watches"
                 class="tile-image">
             <h2 class="tile-title">Watches, Pens & Lighters</h2>
             <span class="tile-count">124 Items</span>
@@ -247,22 +256,22 @@
         </a>
 
         <a href="live.html?category=jewelry" class="category-tile tile-gold">
-            <img src="https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?w=200&h=200&fit=crop" alt="Jewelry"
+            <img src="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=200&h=200&fit=crop" alt="Jewelry"
                 class="tile-image">
             <h2 class="tile-title">Jewelry</h2>
             <span class="tile-count">198 Items</span>
         </a>
 
         <a href="live.html?category=antiques" class="category-tile tile-dark">
-            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=200&h=200&fit=crop" alt="Antiques"
+            <img src="https://images.unsplash.com/photo-1513519245088-0e12902e35ca?w=200&h=200&fit=crop" alt="Antiques"
                 class="tile-image">
             <h2 class="tile-title">Antiques</h2>
             <span class="tile-count">78 Items</span>
         </a>
 
         <a href="live.html?category=cars" class="category-tile tile-soft">
-            <img src="https://images.unsplash.com/photo-1544636331-e26879cd4d9b?w=200&h=200&fit=crop" alt="Classic Cars"
-                class="tile-image">
+            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=200&h=200&fit=crop"
+                alt="Classic Cars" class="tile-image">
             <h2 class="tile-title">Classic Cars</h2>
             <span class="tile-count">34 Items</span>
         </a>
