--- a/signup.html
+++ b/signup.html
@@ -97,7 +97,7 @@
             padding: var(--space-md);
             border-radius: var(--radius-md);
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             transition: all var(--transition-fast);
             border: 1px solid var(--border-color);
             background: var(--bg-card);
@@ -234,7 +234,7 @@
 
         .checkbox-group {
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             gap: var(--space-sm);
             margin-bottom: var(--space-lg);
         }
@@ -244,7 +244,7 @@
             height: 18px;
             accent-color: var(--primary-gold);
             cursor: pointer;
-            margin-top: 2px;
+            margin-top: 0;
             flex-shrink: 0;
         }
 
