--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                     <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=600&h=500&fit=crop"
                         alt="Ankand Office">
                 </div>
-                <div data-animate>
+                                            <div data-animate class="text-center">
                     <h2 class="mb-3">Our <span class="text-gold">Story</span></h2>
                     <p style="color: var(--text-secondary); margin-bottom: var(--space-lg); line-height: 1.8;">
                         Founded in 2018, Ankand was born from a passion for connecting collectors with extraordinary
