--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="navbar-container">
+        <div class="navbar-container" style="width: 100%;">
             <!-- Left: Navigation Links -->
             <ul class="navbar-nav" id="navMenu">
                 <li class="nav-dropdown">
@@ -36,8 +36,8 @@
                 <li><a href="about.html" class="nav-link active">About</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <!-- Mobile Nav Actions -->
-          <div class="mobile-nav-actions">
-<a href="login.html" class="btn btn-nav-outline">Login</a>
+                <div class="mobile-nav-actions">
+                    <a href="login.html" class="btn btn-nav-outline">Login</a>
                     <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                     <a href="live.html" class="btn-join-live">Join Live</a>
                 </div>
@@ -55,9 +55,9 @@
             <!-- Right: Actions -->
             <div class="navbar-actions">
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-          <i class="bi bi-sun-fill"></i>
-        </button>
-        <a href="login.html" class="btn btn-nav-outline">Login</a>
+                    <i class="bi bi-sun-fill"></i>
+                </button>
+                <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
                 <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
@@ -84,7 +84,7 @@
                     <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=600&h=500&fit=crop"
                         alt="Ankand Office">
                 </div>
-                                            <div data-animate class="text-center">
+                <div data-animate class="text-center">
                     <h2 class="mb-3">Our <span class="text-gold">Story</span></h2>
                     <p style="color: var(--text-secondary); margin-bottom: var(--space-lg); line-height: 1.8;">
                         Founded in 2018, Ankand was born from a passion for connecting collectors with extraordinary
