--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="navbar-container">
+        <div class="navbar-container" style="width: 100%;">
             <!-- Left: Navigation Links -->
             <ul class="navbar-nav" id="navMenu">
                 <li class="nav-dropdown">
@@ -36,8 +36,8 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="contact.html" class="nav-link active">Contact</a></li>
                 <!-- Mobile Nav Actions -->
-          <div class="mobile-nav-actions">
-<a href="login.html" class="btn btn-nav-outline">Login</a>
+                <div class="mobile-nav-actions">
+                    <a href="login.html" class="btn btn-nav-outline">Login</a>
                     <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                     <a href="live.html" class="btn-join-live">Join Live</a>
                 </div>
@@ -55,9 +55,9 @@
             <!-- Right: Actions -->
             <div class="navbar-actions">
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-          <i class="bi bi-sun-fill"></i>
-        </button>
-        <a href="login.html" class="btn btn-nav-outline">Login</a>
+                    <i class="bi bi-sun-fill"></i>
+                </button>
+                <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
                 <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
