--- a/live.html
+++ b/live.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="navbar-container">
+        <div class="navbar-container" style="width: 100%;">
             <!-- Left: Navigation Links -->
             <ul class="navbar-nav" id="navMenu">
                 <li class="nav-dropdown">
