--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="navbar-container">
+        <div class="navbar-container" style="width: 100%;">
             <ul class="navbar-nav" id="navMenu">
                 <li class="nav-dropdown">
                     <button class="nav-dropdown-toggle" aria-expanded="false">Home</button>
@@ -33,8 +33,8 @@
                 <li><a href="categories.html" class="nav-link">Categories</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
-          <div class="mobile-nav-actions">
-<a href="login.html" class="btn btn-nav-outline">Login</a>
+                <div class="mobile-nav-actions">
+                    <a href="login.html" class="btn btn-nav-outline">Login</a>
                     <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                     <a href="live.html" class="btn-join-live">Join Live</a>
                 </div>
@@ -48,9 +48,9 @@
             </a>
             <div class="navbar-actions">
                 <button class="dark-mode-toggle" id="darkModeToggle" aria-label="Toggle dark mode">
-          <i class="bi bi-sun-fill"></i>
-        </button>
-        <a href="login.html" class="btn btn-nav-outline">Login</a>
+                    <i class="bi bi-sun-fill"></i>
+                </button>
+                <a href="login.html" class="btn btn-nav-outline">Login</a>
                 <a href="signup.html" class="btn btn-nav-primary">Sign Up</a>
                 <a href="live.html" class="btn-join-live">Join Live</a>
                 <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
